todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-deployment
  template:
    metadata:
      labels:
        app: todo-app-deployment
    spec:
      containers:
        - name: todo-app-container
          image: ${DOCKER_REGISTRY}/todo_app:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"  
        - name: todo-app-backend-container
          image: ${DOCKER_REGISTRY}/todo_app_backend:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
