todo_app/manifests/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-frontend-deployment
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-frontend
  template:
    metadata:
      labels:
        app: todo-app-frontend
    spec:
      containers:
        - name: todo-app-container
          image: TODO_APP_IMAGE/TAG
          imagePullPolicy: Always
          volumeMounts:
            - name: todo-app-config-vol 
              mountPath: "/config"
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          readinessProbe:
            initialDelaySeconds: 10 
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3541
          livenessProbe:
            initialDelaySeconds: 20 
            periodSeconds: 5
            httpGet:
               path: /healthz
               port: 3541
      volumes:
        - name: todo-app-config-vol
          configMap:
            name: todo-app-configmap
