todo_app/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-app-stset
  namespace: project
spec:
  serviceName: todo-app-stset-db-svc
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-stset
  template:
    metadata:
      labels:
        app: todo-app-stset
    spec:
      volumes:
        - name: todo-app-config-vol
          configMap:
            name: todo-app-configmap
      containers:
        - name: todo-app-container
          image: ${DOCKER_REGISTRY}/todo_app:latest
          volumeMounts:
            - name: todo-app-config-vol 
              mountPath: "/config"
        - name: todo-app-backend-container
          image: ${DOCKER_REGISTRY}/todo_app_backend:latest
          volumeMounts:
            - name: todo-app-config-vol 
              mountPath: "/config"
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"           
        - name: todo-app-backend-db
          image: ${DOCKER_REGISTRY}/todo_app_backend_db:latest
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: todo-app-data-storage
              mountPath: /var/lib/postgresql/data 
  volumeClaimTemplates:
    - metadata:
        name: todo-app-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
