todo_app/manifests/headless_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-stset-db-svc
  namespace: project
  labels:
    app: todo-stset-db
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: todo-stset
